Revision history for perl distribution Mojo-IOLoop-ReadWriteFork

2.01 Not Released
 - Add "RWF:STDIN" to DEBUG output

2.00 2022-02-12T11:53:55+0900
 - Add support for "stderr" and "stdout" events

1.02 2021-04-21T13:01:11+0900
 - Fix Mojo::Promise->timer require Mojolicious 8.41 #18

1.01 2021-04-11T12:00:35+0900
 - Fix issue in SYNOPSIS
 - Fix Test::Memory::Cycle issues

1.00 2021-03-25T11:05:26+0900
 - Add pids() to Mojo::IOLoop::ReadWriteFork::SIGCHLD
 - Add run_and_capture_p()
 - Add "asset" event
 - Documented "drain" event
 - Replaced "before_fork" event with "prepare"
 - Replaced "close" event with "finish"
 - Replaced "fork" event with "spawn"

0.43 2021-03-24T16:45:18+0900
 - Fix not triggering "error" on EIO

0.42 2021-03-24T15:26:25+0900
 - Fix $rwf to keep track of itself as long as the child process is running
 - Using Mojo::IOLoop::Stream, since $ioloop->reactor is hard

0.41 2021-03-15T17:26:23+0900
 - Fix circular references

0.40 2021-03-05T18:23:49+0900
 - Fix infinite loop, when die() is called inside "close" event

0.39 2021-02-26T14:17:23+0900
 - Add "before_fork" hook

0.38 2021-02-17T10:15:57+0900
 - Require Mojolicious 8.0
 - Add run_p()
 - Add fix for premature close in special pty cases #12
   Contributor: Ole Bjørn Hessen

0.37 2018-09-26T13:51:13+0900
 - Fix minion test requires Minion::Backend::SQLite >=4.001

0.36 2018-03-11T14:50:05+0100
 - Fix releasing the pty on close #10
   Contributor: Ole Bjørn Hessen

0.35 2017-08-21T13:07:01+0200
 - Need to skip close-filehandles.t for now

0.24 2017-08-19T22:46:02+0200
 - Fix running RWF with Minion 7.05 #9
 - Add test for leaking filehandles in Mojolicious application #7

0.23 2016-10-13T10:07:18+0200
 - Fix documentation: There is no "spawn" event #8

0.22 2016-06-27T08:28:49+0200
 - Add "fork" event

0.21 2016-05-03T14:27:40+0200
 - Fix failing t/synopsis.t #6

0.20 2016-04-18T14:51:14+0200
 - Add support for passing in %ENV #5

0.19 2016-04-14T11:54:18+0200