@@ -1,7 +1,8 @@
 Revision history for perl distribution Mojo-IOLoop-ReadWriteFork
 
 2.01 Not Released
- - Add "RWF:STDIN" to DEBUG output
+ - Add support for conduit = pty3
+ - Internal cleanup regarding filehandle passing
 
 2.00 2022-02-12T11:53:55+0900
  - Add support for "stderr" and "stdout" events
